--- a/gradu2.bib
+++ b/gradu2.bib
@@ -325,6 +325,20 @@
   file = {C\:\\Users\\master\\Zotero\\storage\\DQMHLZIA\\Olson et al_2017_PMLB.pdf;C\:\\Users\\master\\Zotero\\storage\\T9Y2UVYZ\\s13040-017-0154-4.html}
 }
 
+@inproceedings{pereraImproveSoftwareQuality2017,
+  title = {Improve Software Quality through Practicing {{DevOps}}},
+  booktitle = {2017 {{Seventeenth International Conference}} on {{Advances}} in {{ICT}} for {{Emerging Regions}} ({{ICTer}})},
+  author = {Perera, Pulasthi and Silva, Roshali and Perera, Indika},
+  date = {2017-09},
+  pages = {1--6},
+  issn = {2472-7598},
+  doi = {10.1109/ICTER.2017.8257807},
+  abstract = {DevOps is extended from certain agile practices with a mix of patterns intended to improve collaboration between development and operation teams. The main purpose of this paper is to conduct a study on how DevOps practice has impacted to software quality. The secondary objective is to find how to improve quality efficiently. A literature survey has carried out to explore about current DevOps practices in industry. According to the literature survey, the conceptual research model was developed and five hypotheses were derived. Research objectives were accomplished by testing hypotheses using Pearson correlation. A linear model is derived based on the linear regression analysis. An online questionnaire was used to collect quantitative data whereas interviews with experts on DevOps and Quality assurance have been used to identify how to improve the quality of software by practicing DevOps. Recommendations are given based on interview feedback, hypotheses testing with regression analysis. According to the quantitative study, researchers have identified that quality of the software gets improved when practice DevOps by following CAMS (Culture, Automation, Measurement, Sharing) framework. Automation is the most critical factor to improve the software quality. As per the results of multiple regression analysis, it has proved culture, automation, measurement and sharing are important factors to consider to improve quality of the software. In conclusion it can be recommended to use DevOps to achieve high quality software.},
+  eventtitle = {2017 {{Seventeenth International Conference}} on {{Advances}} in {{ICT}} for {{Emerging Regions}} ({{ICTer}})},
+  keywords = {_tablet,Automation,CAMS Framework,Companies,DevOps,ISO 9126,Quality,Software measurement,Software quality,Testing},
+  file = {C\:\\Users\\master\\Zotero\\storage\\D8E3C6NR\\Perera et al_2017_Improve software quality through practicing DevOps.pdf;C\:\\Users\\master\\Zotero\\storage\\URNWQ29A\\8257807.html}
+}
+
 @online{rivolliCharacterizingClassificationDatasets2019,
   title = {Characterizing Classification Datasets: A Study of Meta-Features for Meta-Learning},
   shorttitle = {Characterizing Classification Datasets},
@@ -378,6 +392,25 @@
   abstract = {Statistical modeling is a powerful tool for developing and testing theories by way of causal explanation, prediction, and description. In many disciplines there is near-exclusive use of statistical modeling for causal explanation and the assumption that models with high explanatory power are inherently of high predictive power. Conflation between explanation and prediction is common, yet the distinction must be understood for progressing scientific knowledge. While this distinction has been recognized in the philosophy of science, the statistical literature lacks a thorough discussion of the many differences that arise in the process of modeling for an explanatory versus a predictive goal. The purpose of this article is to clarify the distinction between explanatory and predictive modeling, to discuss its sources, and to reveal the practical implications of the distinction to each step in the modeling process.},
   keywords = {Statistics - Methodology},
   file = {C\:\\Users\\master\\Zotero\\storage\\AAY68PXV\\Shmueli_2010_To Explain or to Predict.pdf;C\:\\Users\\master\\Zotero\\storage\\DT7EAVTS\\1101.html}
+}
+
+@inproceedings{smedsDevOpsDefinitionPerceived2015,
+  title = {{{DevOps}}: {{A Definition}} and {{Perceived Adoption Impediments}}},
+  shorttitle = {{{DevOps}}},
+  booktitle = {Agile {{Processes}} in {{Software Engineering}} and {{Extreme Programming}}},
+  author = {Smeds, Jens and Nybom, Kristian and Porres, Ivan},
+  editor = {Lassenius, Casper and Dingsøyr, Torgeir and Paasivaara, Maria},
+  date = {2015},
+  series = {Lecture {{Notes}} in {{Business Information Processing}}},
+  pages = {166--177},
+  publisher = {{Springer International Publishing}},
+  location = {{Cham}},
+  doi = {10.1007/978-3-319-18612-2_14},
+  abstract = {As the interest in DevOps continues to grow, there is an increasing need for software organizations to understand how to adopt it successfully. This study has as objective to clarify the concept and provide insight into existing challenges of adopting DevOps. First, the existing literature is reviewed. A definition of DevOps is then formed based on the literature by breaking down the concept into its defining characteristics. We interview 13 subjects in a software company adopting DevOps and, finally, we present 11 impediments for the company’s DevOps adoption that were identified based on the interviews.},
+  isbn = {978-3-319-18612-2},
+  langid = {english},
+  keywords = {_tablet,Cloud Service,Continuous Delivery,Cultural Aspect,Service Failure,Software Process Improvement},
+  file = {C\:\\Users\\master\\Zotero\\storage\\TGE2W5BX\\Smeds et al_2015_DevOps.pdf}
 }
 
 @article{wallerIncludingPerformanceBenchmarks2015,
